Updated Configurations for jacoco.gradle and pitest.gradle. Updated Test classes